 * Enh #3974: Make Mantis issues searchable by Search Engine
 * Enh #4016: Automatic language selection based on browser preferences
 * Enh #4036: Changelog should not display versions with no issues (vboctor)
 * Enh #4038: Add icon to sponsorships to attract attention (vboctor)
 * Enh #4066: Support "future" versions and a description field (vboctor)
 * Fix #4005: Signup for new account - invalid username generates crash
 * Fix #4017: Random translations popping up
 * Fix #4018: Real name field allows potentially dangerous HTML
 * Fix #4020: Database field 'realname' not found after plain installation (vboctor)
 * Fix #4027: Database query error on text search
 * Fix #4040: Sponsorship timestamp is not displayed correctly in sponsorship list (vboctor)
 * Fix #4041: Empty "Users sponsoring this issue" (vboctor)
 * Fix #4044: Cross Site Scripting Vulnerability
 * Fix #4052: Not all the buttons are marked as class="button" (vboctor)
 * Fix #4056: Displaying/Reporting Issue -> Application Warning - lang_exists() missing arg 2 (vboctor)
 * Fix #4064: Links are not hyperlinked property if containing () (vboctor)
 * Fix #4065: Issues are not hyperlinked in Changelog if $g_bug_link_tag is not # (vboctor).
 * New Config: fallback_language (default 'english') - Fallback language for automatic language selection..
 * Updated German, Italian, and Brazilian Portuguese languages.

2004.07.07  -  0.19.0a1

This is an alpha version of 0.19.0, it is not recommended for production use.  Users are encouraged to test it on a backup copy of their data and provide feedback to development team.

Users installing Mantis for the first time should sql/db_generate.sql to create the database, then run the http://www.example.com/mantis/admin and run the upgrade scripts.  Already existing users will need to backup their database, then run upgrade.

 * Enh #0000: Change of terminology, replaced "bug" with "issue" [first step in #2710].