@@ -6,7 +6,7 @@
  * See the README and LICENSE files for details
  *
  * --------------------------------------------------------
- * $Id: common.js,v 1.1 2004-06-29 08:23:06 int2str Exp $
+ * $Id: common.js,v 1.2 2004-07-12 04:37:44 int2str Exp $
  * --------------------------------------------------------
  */
 
@@ -87,6 +87,8 @@ var g_div_bugnotes		= 0x0002;
 var g_div_bugnote_add	= 0x0004;
 var g_div_upload_form	= 0x0010;
 var g_div_monitoring	= 0x0020;
+var g_div_sponsorship	= 0x0040;
+var g_div_relationships	= 0x0080;
 
 function GetViewSettings() {
 	var t_cookie = GetCookie( "VIEW_SETTINGS" );
